CSS: Fixed z-indexes; changed font-weight. HTML: Changed tag from p to h3

--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,6 @@
 }
 
 .kaufman {
-  z-index: -2;
   position: relative;
   overflow: hidden;
   padding: 90px 0;
@@ -234,24 +233,25 @@
 }
 
 .section-title_theme_dark {
+  position: relative; /*задал относительное позиционирование, без него z-index не работает */
   z-index: 1;
   color: #f2f2f2;
 }
 
 .section-subtitle_theme_dark {
+  position: relative; /*задал относительное позиционирование, без него z-index не работает */
   z-index: 1;
-  font-weight: bold;
   color: #f2f2f2;
 }
 
 .table__cell_theme_dark {
+  z-index: 1; /*не позиционированный элемент, такой как элемент внутри флексбокса также может получать z-index. */
   width: 200px;
   margin-top: 80px;
   color: #f2f2f2;
 }
 
 .kaufman__triangle {
-  z-index: -1;
   position: absolute;
   right: -210px;
   top: 0;
